@@ -4,6 +4,7 @@ import java.awt.Desktop;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.nio.file.Paths;
 import processing.app.Editor;
 import processing.app.tools.Tool;
 
@@ -20,12 +21,14 @@ public class BlocklyArduinoUpdater implements Tool {
   }
 
   public void run() {
-        //String[] run = {"java","-jar","UpdateApp.jar"};
-		String[] run = {"UpdateApp.jar"};
-        try {
-            Runtime.getRuntime().exec(run);
-        } catch (Exception ex) {
-            ex.printStackTrace();
-        }
+	  try {		
+		String PathToExec = Paths.get(".").toAbsolutePath().normalize().toString();
+		PathToExec += "\\tools\\BlocklyArduinoUpdater\\tool\\";
+		//System.out.println("Current relative path is: " + PathToExec);
+        Runtime runtime = Runtime.getRuntime();
+        runtime.exec(new String[] { PathToExec + "updater.bat" } );
+    } catch (IOException e) {
+        e.printStackTrace();
+    }
   }
 }
